--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@ if (location.hash === '#apps') {
 			<div class="columns is-vcentered">
 				<div class="column is-two-thirds is-centered has-nice-link">
 					<div itemscope itemtype="http://schema.org/Person">
-						<img id="profile-pic" src="sindre-sorhus-small.jpg" width="160" height="160" itemprop="image">
-						<h1 class="title is-2" itemprop="name">Sindre Sorhus</h1>
-						<h2 class="subtitle is-4" itemprop="description">Full-Time Open-Sourcerer &amp; Aspiring Rebel</h2>
-						<p>I make lots of modules, CLI tools, and apps. Mostly Swift &amp; Node.js.</p>
+						<img id="profile-pic" src="ishan.png" width="160" height="160" itemprop="image">
+						<h1 class="title is-2" itemprop="name">Ishan Kumar</h1>
+						<h2 class="subtitle is-4" itemprop="description">Computer Arch. and ML enthusiast &amp; Aspiring Rebel</h2>
+						<p> Avid reddit user, Learning and Sharing &amp; writing on Quora.</p>
 					</div>
 					<br>
 					<p class="has-text-centered">
