--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ if (location.hash === '#apps') {
 </section>
 
 <section class="hero is-fullheight is-gray">
-	<div id="projects" class="hero-body container">
+	<div id="Resume" class="hero-body container">
 		<div class="columns is-vcentered">
 			<div class="column has-text-centered">
 				<img id="unicorn-icon" src="unicorn.svg" width="100" height="100">
