--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ if (location.hash === '#apps') {
 						<img id="profile-pic" src="ishan.jpg" width="160" height="160" itemprop="image">
 						<h1 class="title is-2" itemprop="name">Ishan Kumar</h1>
 						<h2 class="subtitle is-4" itemprop="description">Computer Arch. and ML enthusiast </h2>
-						<p> Avid reddit user, Learning and Sharing &amp; writing on Quora.</p>
+						<p> Avid reddit user, Learning , Sharing &amp; writing on Quora.</p>
 					</div>
 					<br>
 					<p class="has-text-centered">
