--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ if (location.hash === '#apps') {
 						</a>
 						<a class="button is-large is-white" href="https://twitter.com/sindresorhus">
 							<span class="icon">
-								<i class="fa fa-twitter"></i>
+								<i class=" "></i>
 							</span>
 							<span>Tweets</span>
 						</a>
