changed site icons and names

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@ if (location.hash === '#apps') {
 					<p class="has-text-centered">
 						<a class="button is-large is-white" href="https://blog.sindresorhus.com">
 							<span class="icon">
-								<i class="fa fa-pencil"></i>
+								<i class="fa "></i>
 							</span>
-							<span>Writings</span>
+							<span>Linkedin</span>
 						</a>
 						<a class="button is-large is-white" href="https://github.com/sindresorhus">
 							<span class="icon">
-								<i class="fa fa-github"></i>
+								<i class="fa "></i>
 							</span>
 							<span>Code</span>
 						</a>
@@ -58,7 +58,7 @@ if (location.hash === '#apps') {
 							<span class="icon">
 								<i class=" "></i>
 							</span>
-							<span>Tweets</span>
+							<span>Facebook</span>
 						</a>
 					</p>
 					<br>
