--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ if (location.hash === '#apps') {
 						</a>
 						<a class="button is-large is-white" href="https://github.com/sindresorhus">
 							<span class="icon">
-								<i class="fa "></i>
+								<i class="fa fa-github"></i>
 							</span>
 							<span>Code</span>
 						</a>
