updated the images

--- a/_apps/battery-indicator.html
+++ b/_apps/battery-indicator.html
@@ -1,10 +1,9 @@
 ---
-title: Battery Indicator
-subtitle: Remaining battery time in your menu bar
-description: Battery Indicator lets you quickly glance the remaining battery time or percentage right in your menu bar. This is especially useful on macOS Sierra 10.12.2 or later where clicking the battery icon no longer shows the remaining time.
-type: macOS
+title: globetrotter
+subtitle: I don’t trust words. I trust pictures.
+description: Photography, as a powerful medium of expression and communications, offers an infinite variety of perception, interpretation and execution.
+type: Photography
 date: 2017-02-18
-app_store_url: https://apps.apple.com/us/app/battery-indicator/id1206020918?mt=12
 links:
-  'Product Hunt post': https://www.producthunt.com/posts/battery-indicator
+  'Collections': https://in.pinterest.com/adarshmittal123/pins/
 ---
