--- a/_apps/battery-indicator.html
+++ b/_apps/battery-indicator.html
@@ -1,5 +1,5 @@
 ---
-title: globetrotter
+title: Globetrotter
 subtitle: I don’t trust words. I trust pictures.
 description: Photography, as a powerful medium of expression and communications, offers an infinite variety of perception, interpretation and execution.
 type: Photography
