--- a/_apps/dato.html
+++ b/_apps/dato.html
@@ -2,9 +2,11 @@
 title: Udemy Courses
 subtitle: GRE and TOEFL Preparation 
 description: A comprehensive guide for gre vocabulary, reading comprehension and text completion
+type: Education
 main_button:
   title: GRE Verbal Text Completion Series
   url: https://www.udemy.com/gre-verbal-text-completion-series/
+  
   title: GRE Verbal Vocabulary | Word Power | Mnemonics
   url: https://www.udemy.com/gre-verbal-vocabulary/
 ---
