--- a/_apps/dato.html
+++ b/_apps/dato.html
@@ -9,4 +9,8 @@ main_button:
   
   title: GRE Verbal Vocabulary | Word Power | Mnemonics
   url: https://www.udemy.com/gre-verbal-vocabulary/
+  
+links:
+  'Product Hunt post': https://www.producthunt.com/posts/gifski
+  'Product Hunt post': https://www.producthunt.com/posts/gifski
 ---
