--- a/_apps/dato.html
+++ b/_apps/dato.html
@@ -13,4 +13,8 @@ main_button:
 links:
   'Product Hunt post': https://www.producthunt.com/posts/gifski
   'Product Hunt post': https://www.producthunt.com/posts/gifski
+
+links:
+  'Product Hunt post': https://www.producthunt.com/posts/gifski
+  'Product Hunt post': https://www.producthunt.com/posts/gifski
 ---
