--- a/_apps/dato.html
+++ b/_apps/dato.html
@@ -1,20 +1,8 @@
 ---
 title: Udemy Courses
-subtitle: GRE and TOEFL Preparation 
+subtitle: We never know which lives we influence, or when, or why. 
 description: A comprehensive guide for gre vocabulary, reading comprehension and text completion
 type: Education
 main_button:
-  title: GRE Verbal Text Completion Series
-  url: https://www.udemy.com/gre-verbal-text-completion-series/
-  
-  title: GRE Verbal Vocabulary | Word Power | Mnemonics
-  url: https://www.udemy.com/gre-verbal-vocabulary/
-  
-links:
-  'Product Hunt post': https://www.producthunt.com/posts/gifski
-  'Product Hunt post': https://www.producthunt.com/posts/gifski
-
-links:
-  'Product Hunt post': https://www.producthunt.com/posts/gifski
-  'Product Hunt post': https://www.producthunt.com/posts/gifski
----
+  title: GRE and TOEFL collection
+  url: https://www.udemy.com/user/adarsh-miittal-2/
