--- a/_apps/dato.html
+++ b/_apps/dato.html
@@ -1,6 +1,6 @@
 ---
 title: Udemy Courses
-subtitle: We never know which lives we influence or why. 
+subtitle: We never know which lives we influence or why, so in my free time I create Udemy courses.
 description: A comprehensive guide for gre vocabulary, reading comprehension and text completion
 type: Education
 main_button:
