--- a/_apps/black-out.html
+++ b/_apps/black-out.html
@@ -1,13 +1,10 @@
 ---
-title: Black Out
-subtitle: Hide sensitive parts of an image
-description: Black Out is a macOS app that lets you quickly hide sensitive parts of an image. This can be useful when you want to post a screenshot or photo on the web that contains some information you don't want revealed.
-type: macOS
-date: 2017-12-01
-app_store_url: https://apps.apple.com/us/app/black-out/id1319884285
-main_button:
-  title: Read more
-  url: https://blog.sindresorhus.com/black-out-c44a1a0e7122
+title: Dance
+subtitle: Dance like nobody's watching
+description: If you hit a wall, climb over it, crawl under it, or dance on top of it.
+type: Dance
+date: 2017-02-18
 links:
-  'Product Hunt post': https://www.producthunt.com/posts/black-out
+  'Lets dive into my collections': https://www.youtube.com/watch?v=rbr8Ny7BlE8
 ---
+
