--- a/_apps/blear.html
+++ b/_apps/blear.html
@@ -1,9 +1,10 @@
 ---
-title: Blear
-subtitle: Transform photos into blurry wallpapers
-description: Blear lets you easily transform your own photos or the bundled ones into stunning blurry wallpapers for your device. Make your Home/Lock screen shine! (Open source)
-type: iOS
-date: 2015-06-09
-app_store_url: https://apps.apple.com/us/app/blear/id994182280?mt=8
-repo_url: https://github.com/sindresorhus/blear
+title: Music (Keyboard)
+subtitle: Without music, life would be a mistake
+description: Music gives a soul to the universe, wings to the mind, flight to the imagination and life to everything.
+type: Music
+date: 2017-02-18
+links:
+  'Lets dive into my collections': https://www.youtube.com/channel/UCUcC3nz_glcmjpaQyNRctRA
 ---
+
