--- a/_apps/caprine.html
+++ b/_apps/caprine.html
@@ -1,9 +1,9 @@
 ---
-title: Caprine
-subtitle: Elegant Facebook Messenger desktop app
-description: Caprine is an open-source, cross-platform, and privacy focused Facebook Messenger desktop app built with Electron. (Open source)
-type: Cross-platform
-date: 2015-09-16
-screenshot_frame: false
-repo_url: https://github.com/sindresorhus/caprine
+title: Social Acitivity
+subtitle: It is not enough to be compassionate. You must act.
+description: I am only one, but I am one. I cannot do everything, but I can do something. And I will not let what I cannot do interfere with what I can do.
+type: Love and Respect
+date: 2017-02-18
+links:
+  'Lets dive into my collections': https://in.pinterest.com/adarshmittal123/pins/
 ---
