--- a/_apps/caprine.html
+++ b/_apps/caprine.html
@@ -1,5 +1,5 @@
 ---
-title: Social Acitivity
+title: Social Activity
 subtitle: It is not enough to be compassionate. You must act.
 description: I am only one, but I am one. I cannot do everything, but I can do something. And I will not let what I cannot do interfere with what I can do.
 type: Love and Respect
