--- a/projects.html
+++ b/projects.html
@@ -7,10 +7,11 @@ layout: default
 		<h2 class="title is-2">Projects</h2>
 		<p>Lets see if our hobbies match.</p>
 		<br>
+		
 		<div class="columns is-multiline">
-			{% for project in site.projects reversed %}
+			{% for app in site.apps reversed %}
 			<div class="column is-mobile is-half-tablet is-one-third-desktop">
-				<a href="{% if project.external_url %}{{ project.external_url }}{% else %}{{ project.url }}{% endif %}">
+				<a href="{% if app.external_url %}{{ app.external_url }}{% else %}{{ app.url }}{% endif %}">
 					<div class="box">
 						<figure class="image">
 							{% comment %}
@@ -18,22 +19,22 @@ layout: default
 							{% endcomment %}
 
 							{% for file in site.static_files %}
-								{% assign path = '/assets/' | projectend: project.slug | projectend: '/thumbnail' %}
+								{% assign path = '/assets/' | append: app.slug | append: '/thumbnail' %}
 								{% if file.path contains path %}
 									<img src="{{ file.path }}">
 								{% endif %}
 							{% endfor %}
 						</figure>
 						<h2 class="title">
-							<span>{{ project.title }}</span>
-							{% if project.is_prerelease %}
+							<span>{{ app.title }}</span>
+							{% if app.is_prerelease %}
 								<span class="tag is-small is-info">Prerelease</span>
 							{% elsif forloop.first %}
 								<span class="tag is-small is-success">New!</span>
 							{% endif %}
-							<span class="tag is-small">{{ project.type }}</span>
+							<span class="tag is-small">{{ app.type }}</span>
 						</h2>
-						<p class="subtitle is-6">{{ project.subtitle }}</p>
+						<p class="subtitle is-6">{{ app.subtitle }}</p>
 					</div>
 				</a>
 			</div>
