--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@ layout: default
 		<br>
 		
 		<div class="columns is-multiline">
-			{% for app in site.apps reversed %}
+			{% for app in site.projects reversed %}
 			<div class="column is-mobile is-half-tablet is-one-third-desktop">
 				<a href="{% if app.external_url %}{{ app.external_url }}{% else %}{{ app.url }}{% endif %}">
 					<div class="box">
