--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<p>Lets see if our hobbies match.</p>
+<p>Debug1: Start of HTML page.</p>
 <section class="section hero is-fullheight is-default is-bold">
 	<div id="projects" class="container">
 		<h2 class="title is-2">Projects</h2>
