--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@ layout: default
 		<br>
 		
 		<div class="columns is-multiline">
-			{% for project in site.projects reversed %}
+			{% for project in site.apps reversed %}
 			<div class="column is-mobile is-half-tablet is-one-third-desktop">
 				<a href="{% if project.external_url %}{{ project.external_url }}{% else %}{{ project.url }}{% endif %}">
 					<div class="box">
@@ -19,7 +19,7 @@ layout: default
 							{% endcomment %}
 
 							{% for file in site.static_files %}
-								{% assign path = '/assets/' | projectend: project.slug | projectend: '/thumbnail' %}
+								{% assign path = '/assets/' | append: project.slug | append: '/thumbnail' %}
 								{% if file.path contains path %}
 									<img src="{{ file.path }}">
 								{% endif %}
