--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <p>Debug1: Start of HTML page.</p>
 <section class="section hero is-fullheight is-default is-bold">
-	<div id="apps" class="container">
+	<div id="projects" class="container">
 		<h2 class="title is-2">Leisure</h2>
 		<p>Lets see if our hobbies match.</p>
 		<br>
