--- a/projects.html
+++ b/projects.html
@@ -4,8 +4,8 @@ layout: default
 <p>Debug1: Start of HTML page.</p>
 <section class="section hero is-fullheight is-default is-bold">
 	<div id="projects" class="container">
-		<h2 class="title is-2">Leisure</h2>
-		<p>Lets see if our hobbies match.</p>
+		<h2 class="title is-2">Projects</h2>
+		<p>Lets look at some interesting projects.</p>
 		<br>
 		<div class="columns is-multiline">
 			{% for app in site.apps reversed %}
