--- a/projects.html
+++ b/projects.html
@@ -3,9 +3,9 @@ layout: default
 ---
 <p>Debug1: Start of HTML page.</p>
 <section class="section hero is-fullheight is-default is-bold">
-	<div id="apps" class="container">
-		<h2 class="title is-2">Projects</h2>
-		<p>Lets look at some interesting projects.</p>
+	<div id="projects" class="container">
+		<h2 class="title is-2">ghghghghg</h2>
+		<p>Lets look at some interesting.</p>
 		<br>
 		<div class="columns is-multiline">
 			{% for app in site.projects reversed %}
