--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@ layout: default
 		<p>Lets see if our projects match.</p>
 		<br>
 		<div class="columns is-multiline">
-			{% for app in site.apps reversed %}
+			{% for app in site.projects reversed %}
 			<div class="column is-mobile is-half-tablet is-one-third-desktop">
 				<a href="{% if app.external_url %}{{ app.external_url }}{% else %}{{ app.url }}{% endif %}">
 					<div class="box">
