--- a/projects.html
+++ b/projects.html
@@ -3,12 +3,12 @@ layout: default
 ---
 
 <section class="section hero is-fullheight is-default is-bold">
-	<div id="apps" class="container">
+	<div id="projects" class="container">
 		<h2 class="title is-2">Projects</h2>
-		<p>Lets see if our projects match.</p>
+		<p>Lets see if our hobbies match.</p>
 		<br>
 		<div class="columns is-multiline">
-			{% for app in site.projects reversed %}
+			{% for app in site.apps reversed %}
 			<div class="column is-mobile is-half-tablet is-one-third-desktop">
 				<a href="{% if app.external_url %}{{ app.external_url }}{% else %}{{ app.url }}{% endif %}">
 					<div class="box">
