--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ if (location.hash === '#apps') {
 						</a>
 					</p>
 					<br>
-					<a href="{% link thanks.md %}">Hello Huge thanks to all my amazing supporters!</a>
+					<a href="{% link  %}">Thanks to all my family and friends. !</a>
 					<br>
 					<br>
 					<hr id="latest-blog-post-separator">
