--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@ if (location.hash === '#apps') {
 					</div>
 					<br>
 					<p class="has-text-centered">
-						<a class="button is-large is-white" href="https://blog.sindresorhus.com">
+						<a class="button is-large is-white" href="https://www.linkedin.com/in/ishan-kumar-6386428a/">
 							<span class="icon">
 								<i class="fa "></i>
 							</span>
 							<span>Linkedin</span>
 						</a>
-						<a class="button is-large is-white" href="https://github.com/sindresorhus">
+						<a class="button is-large is-white" href="https://github.com/ishank4">
 							<span class="icon">
 								<i class="fa fa-github"></i>
 							</span>
 							<span>Code</span>
 						</a>
-						<a class="button is-large is-white" href="https://twitter.com/sindresorhus">
+						<a class="button is-large is-white" href="https://www.facebook.com/ishan.kumar.5283">
 							<span class="icon">
 								<i class=" "></i>
 							</span>
