--- a/_apps/battery-indicator.html
+++ b/_apps/battery-indicator.html
@@ -5,5 +5,5 @@ description: Photography, as a powerful medium of expression and communications,
 type: Photography
 date: 2017-02-18
 links:
-  'Lets dive into my collections': https://in.pinterest.com/adarshmittal123/pins/
+  'Lets dive into my collections': https://in.pinterest.com/ishank4/
 ---
