--- a/_apps/caprine.html
+++ b/_apps/caprine.html
@@ -5,5 +5,5 @@ description: I am only one, but I am one. I cannot do everything, but I can do s
 type: Love and Respect
 date: 2017-02-18
 links:
-  'Lets dive into my collections': https://in.pinterest.com/adarshmittal123/pins/
+  'Lets dive into my collections': https://in.pinterest.com/ishank4/
 ---
