--- a/_apps/dato.html
+++ b/_apps/dato.html
@@ -5,5 +5,5 @@ description: A comprehensive guide for gre vocabulary, reading comprehension and
 type: Education
 main_button:
   title: GRE and TOEFL collection
-  url: https://www.udemy.com/user/adarsh-miittal-2/
+  url: https://www.udemy.com/user/ishankumar/
 ---
